update for heroku

--- a/config/database.yml
+++ b/config/database.yml
@@ -14,8 +14,14 @@ test:
 production:
   adapter: postgresql
   encoding: unicode
+  database: production
+  host: <%= ENV['DATABASE_HOST'] %>
   pool: 5
-  host: <%= ENV['DATABASE_HOST'] || 'db' %>
-  database: <%= ENV['DATABASE_NAME'] || 'sinatra' %>
-  username: <%= ENV['DATABASE_USER'] || 'sinatra' %>
-  password: <%= ENV['DATABASE_PASSWORD'] || 'sinatra' %>
+
+  # adapter: postgresql
+  # encoding: unicode
+  # pool: 5
+  # host: <%= ENV['DATABASE_HOST'] || 'db' %>
+  # database: <%= ENV['DATABASE_NAME'] || 'sinatra' %>
+  # username: <%= ENV['DATABASE_USER'] || 'sinatra' %>
+  # password: <%= ENV['DATABASE_PASSWORD'] || 'sinatra' %>
